--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: assets
 collections:
   - name: travel
     label: Travel
-    folder: travel
+    folder: src/travel
     create: true
     fields:
       - { name: path, label: Path }
@@ -18,7 +18,7 @@ collections:
 
   - name: thoughts
     label: Thoughts
-    folder: thoughts
+    folder: src/thoughts
     create: true
     fields:
       - { name: path, label: Path }
